Updated state and annual groupby

--- a/JonPara_Branch/wba_decision_trees.ipynb
+++ b/JonPara_Branch/wba_decision_trees.ipynb
@@ -10657,6 +10657,199 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pov_ins_df_2 = full_df.groupby([\"State\", \"Year\"])[\"Percentage_Poverty\", \"Percentage_Uninsured\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Percentage_Poverty</th>\n",
+       "      <th>Percentage_Uninsured</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">AK</th>\n",
+       "      <th>2008</th>\n",
+       "      <td>12.646429</td>\n",
+       "      <td>26.295333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>12.120690</td>\n",
+       "      <td>28.028148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>14.075862</td>\n",
+       "      <td>27.128604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>14.106897</td>\n",
+       "      <td>27.707785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>14.075862</td>\n",
+       "      <td>27.815604</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Percentage_Poverty  Percentage_Uninsured\n",
+       "State Year                                          \n",
+       " AK   2008           12.646429             26.295333\n",
+       "      2009           12.120690             28.028148\n",
+       "      2010           14.075862             27.128604\n",
+       "      2011           14.106897             27.707785\n",
+       "      2012           14.075862             27.815604"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pov_ins_df_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Percentage_Poverty</th>\n",
+       "      <th>Percentage_Uninsured</th>\n",
+       "      <th>Poverty/Uninsured Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">AK</th>\n",
+       "      <th>2008</th>\n",
+       "      <td>12.646429</td>\n",
+       "      <td>26.295333</td>\n",
+       "      <td>0.480938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>12.120690</td>\n",
+       "      <td>28.028148</td>\n",
+       "      <td>0.432447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>14.075862</td>\n",
+       "      <td>27.128604</td>\n",
+       "      <td>0.518857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>14.106897</td>\n",
+       "      <td>27.707785</td>\n",
+       "      <td>0.509131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>14.075862</td>\n",
+       "      <td>27.815604</td>\n",
+       "      <td>0.506042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Percentage_Poverty  Percentage_Uninsured  Poverty/Uninsured Ratio\n",
+       "State Year                                                                   \n",
+       " AK   2008           12.646429             26.295333                 0.480938\n",
+       "      2009           12.120690             28.028148                 0.432447\n",
+       "      2010           14.075862             27.128604                 0.518857\n",
+       "      2011           14.106897             27.707785                 0.509131\n",
+       "      2012           14.075862             27.815604                 0.506042"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pov_ins_df_2[\"Poverty/Uninsured Ratio\"] = pov_ins_df[\"Percentage_Poverty\"]/pov_ins_df[\"Percentage_Uninsured\"]\n",
+    "pov_ins_df_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
